# DocGen

./: .gitignore  README.md  build-extensions.py  pyproject.toml
src/docgen/: __main__.py  default.py  logging_.py  quarto.py  regular_expressions.py  settings.py
src/docgen/cli/: __init__.py  base.py  install.py  quarto.py  render.py
src/docgen/examples/api/: Chapter1.md  example.xlsx  minimal_example.py
src/docgen/examples/minimal_example/: Chapter1.md  Chapter1_nested_part.md  Chapter2.md  _variables.yml  minimal_example.py
src/docgen/examples/minimal_example/folder/: chapter_in_folder.md
src/docgen/examples/minimal_example/folder/subfolder/: chapter_in_subfolder.md
src/docgen/extensions/: __init__.py
src/docgen/extensions/docgen/: README.md  template.qmd
src/docgen/extensions/docgen/_extensions-files/docgen/: docgen.lua  excel.lua  template.docx
src/docgen/extensions/docgen/_extensions/docgen/: _extension.yml
src/docgen/outputs/: __init__.py  abstract.py  container.py  descriptor.py  excel.py  img_copy.py
src/docgen/renderers/: __init__.py  renderer.py
src/docgen/renderers/pre/: jinja.py
src/docgen/renderers/type/: abstract.py  base_pre_renderer2.py  book.py  default.py  manuscrit.py  user.py  website.py
src/docgen/utils/: mirror.py  path.py  source.py  table.py  yml.py
