[project]
name = "docgen"
version = "0.1.0"
description = "Dynamic document generator with Excel integration"
authors = [
    {name = "BERRI Sanae",email = "berrisanae03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "ipykernel (>=6.0,<7.0.0)",       
  "pyyaml (>=6.0.0,<7.0.0)",        
  "matplotlib (>=3.10.1,<4.0.0)", 
  "jupyter",  
  "jinja2>=3.1",  
  "pydantic-settings (>=2.10.1,<3.0.0)",  
  "semver (>=3.0.4,<4.0.0)",  
  "tqdm (>=4.67.1,<5.0.0)",  
  "panflute (>=2.3.1,<3.0.0)",  
  "xlwings (>=0.33.15,<0.34.0)",  
  "pandas (>=2.3.1,<3.0.0)",  
  "openpyxl (>=3.1.5,<4.0.0)",  
  "tabulate (>=0.9.0,<0.10.0)"
]


[tool.poetry]
packages = [{include = "docgen", from = "src"}]

include = [
    { path = "src/docgen/extensions", format = ["sdist", "wheel"] },
]


[tool.poetry.extras]
xlwings = ["xlwings"]


[tool.poetry.scripts]
docgen = 'docgen.cli:main'


[tool.poetry.build]
script = "build-extensions.py"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

